# Robot_er_Haat

./: README.md  package.xml  setup.py
Robot_er_Haat-main/: setup.py
Robot_er_Haat-main/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Robot_er_Haat-main/install/rover_arm/lib/rover_arm/: arm_joy_controller  ik_visualizer
Robot_er_Haat-main/install/rover_arm/share/rover_arm/: package.sh
Robot_er_Haat-main/install/rover_arm/share/rover_arm/launch/: gazebo.launch.py
Robot_er_Haat-main/install/rover_arm/share/rover_arm/urdf/: arm.urdf
Robot_er_Haat-main/launch/: arm.launch.py  display.launch.py
config/: arm_controllers.yaml
launch/: gazebo.launch.py  ik.launch.py
rover_arm/: arm_joy_controller.py  ik_visualizer.py
rviz/: arm.rviz
urdf/: arm.urdf
